--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
   },
   "main": "./index.ts",
   "dependencies": {
-    "@stomp/stompjs": "^3.0.3"
+    "@stomp/stompjs": "^3.0.3",
+    "angular2-uuid": "^1.1.1"
   },
   "devDependencies": {
     "@angular/cli": "1.0.0",
