--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@stomp/ng2-stompjs",
-  "version": "0.4.2",
+  "version": "0.4.1",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
@@ -33,7 +33,8 @@
   },
   "main": "./index.ts",
   "dependencies": {
-    "@stomp/stompjs": "^3.1.1"
+    "@stomp/stompjs": "^3.1.1",
+    "angular2-uuid": "^1.1.1"
   },
   "devDependencies": {
     "@angular/cli": "1.0.0",
